force-app/main/default/objects/Opportunity/fields/Influencer_3_Weighted_Rel__c.field-meta.xml
<CustomField>
    <fullName>Influencer_3_Weighted_Rel__c</fullName>
    <formula>IF(
    Influencer_3_Weighted_Rel_Score__c &gt; 5, 
    &#39;Key Promoter&#39;, 
    IF(
        AND(Influencer_3_Weighted_Rel_Score__c &lt;= 5, Influencer_3_Weighted_Rel_Score__c &gt;= 3), 
        &#39;Promoter&#39;, 
        IF(
            AND(Influencer_3_Weighted_Rel_Score__c &lt; 3, Influencer_3_Weighted_Rel_Score__c &gt;= 0), 
            &#39;Neutral&#39;, 
            IF(
                Influencer_3_Weighted_Rel_Score__c &lt; 0, 
                &#39;Detractor&#39;, 
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer 3 Weighted Rel</label>
    <type>Text</type>
</CustomField>