force-app/main/default/objects/Opportunity/fields/Influencer_4__c.field-meta.xml
<CustomField>
    <fullName>Influencer_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the interior design firm working on the project</description>
    <label>Influencer 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Influencer 4)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>