force-app/main/default/objects/Opportunity/fields/Influencer_4_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Influencer_4_Weighting__c</fullName>
    <label>Influencer 4 Weighting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anti</fullName>
            </value>
            <value>
                <fullName>Typical</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>