force-app/main/default/objects/Opportunity/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Influencer 1)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>