force-app/main/default/objects/Opportunity/fields/Influencer_Opportunity_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Opportunity_Relationship__c</fullName>
    <label>Influencer Opportunity Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Key</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>