force-app/main/default/objects/Opportunity/fields/Influencer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Relationship__c</fullName>
    <description>This field will update on &quot;Update Score Fields&quot; workflow rule</description>
    <label>Influencer Relationship</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>