force-app/main/default/objects/Opportunity/fields/Interconnecting_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Interconnecting_Stairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interconnecting Stairs</label>
    <type>Checkbox</type>
</CustomField>