force-app/main/default/objects/Opportunity/fields/Internal_Hoardings__c.field-meta.xml
<CustomField>
    <fullName>Internal_Hoardings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Hoardings</label>
    <type>Checkbox</type>
</CustomField>