force-app/main/default/objects/Opportunity/fields/International_Procurement__c.field-meta.xml
<CustomField>
    <fullName>International_Procurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Procurement</label>
    <type>Checkbox</type>
</CustomField>