force-app/main/default/objects/Opportunity/fields/Is_Buildcorp_preferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Buildcorp_preferred__c</fullName>
    <label>Is Buildcorp preferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>