force-app/main/default/objects/Opportunity/fields/K_Primary_Key_in_TAS_del__c.field-meta.xml
<CustomField>
    <fullName>K_Primary_Key_in_TAS_del__c</fullName>
    <label>K - Primary Key in TAS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>