force-app/main/default/objects/Opportunity/fields/Likelihood_of_Project_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Project_to_Proceed__c</fullName>
    <description>Likelihood of Project to Proceed</description>
    <label>Likelihood of Project to Proceed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Likelihood_of_Project_to_Proceed</valueSetName>
    </valueSet>
</CustomField>