force-app/main/default/objects/Opportunity/fields/Live_Environment__c.field-meta.xml
<CustomField>
    <fullName>Live_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the project built in a live environment?</inlineHelpText>
    <label>Live Environment</label>
    <type>Checkbox</type>
</CustomField>