force-app/main/default/objects/Opportunity/fields/Lost_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lost_Comment__c</fullName>
    <inlineHelpText>Please provide more detail as to why this Opportunity was lost</inlineHelpText>
    <label>Lost Comment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>