force-app/main/default/objects/Opportunity/fields/Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Lost_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who was successful?</inlineHelpText>
    <label>Builder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Lost to)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>