force-app/main/default/objects/Opportunity/fields/Main_Road_Management__c.field-meta.xml
<CustomField>
    <fullName>Main_Road_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Road Management</label>
    <type>Checkbox</type>
</CustomField>