force-app/main/default/objects/Opportunity/fields/Mass_Timber_Structure__c.field-meta.xml
<CustomField>
    <fullName>Mass_Timber_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Timber Structure</label>
    <type>Checkbox</type>
</CustomField>