force-app/main/default/objects/Opportunity/fields/Match_Percent__c.field-meta.xml
<CustomField>
    <fullName>Match_Percent__c</fullName>
    <label>Match Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>