force-app/main/default/objects/Opportunity/fields/MBA_Award__c.field-meta.xml
<CustomField>
    <fullName>MBA_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MBA Award</label>
    <type>Checkbox</type>
</CustomField>