force-app/main/default/objects/Opportunity/fields/MBA_Award_Details__c.field-meta.xml
<CustomField>
    <fullName>MBA_Award_Details__c</fullName>
    <label>MBA Award Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>