force-app/main/default/objects/Opportunity/fields/Meters_Square__c.field-meta.xml
<CustomField>
    <fullName>Meters_Square__c</fullName>
    <label>M2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>