force-app/main/default/objects/Opportunity/fields/Methodology_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Methodology_Strategy__c</fullName>
    <label>Methodology Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>