force-app/main/default/objects/Opportunity/fields/NABERS__c.field-meta.xml
<CustomField>
    <fullName>NABERS__c</fullName>
    <label>NABERS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Star</fullName>
            </value>
            <value>
                <fullName>5 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>2 Star</fullName>
            </value>
            <value>
                <fullName>1 Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>