force-app/main/default/objects/Opportunity/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we signed an Non Disclosure Agreements</description>
    <inlineHelpText>Have we signed an Non Disclosure Agreement checking this box will mean the project will not appear on distributed reports</inlineHelpText>
    <label>Non Disclosure</label>
    <type>Checkbox</type>
</CustomField>