force-app/main/default/objects/Opportunity/fields/Need_for_ECI__c.field-meta.xml
<CustomField>
    <fullName>Need_for_ECI__c</fullName>
    <label>Need for ECI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Live Environment</fullName>
            </value>
            <value>
                <fullName>Evolving Design</fullName>
            </value>
            <value>
                <fullName>All of the Above</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>