force-app/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Next steps in the process</description>
    <inlineHelpText>Please enter the date for each comment you make.  E.g.  24/06 - Contact Tony to engage with Project Management company.</inlineHelpText>
    <label>Next Steps</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>