force-app/main/default/objects/Opportunity/fields/Night_Works__c.field-meta.xml
<CustomField>
    <fullName>Night_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Works</label>
    <type>Checkbox</type>
</CustomField>