force-app/main/default/objects/Opportunity/fields/Opp_Business_Unit_del__c.field-meta.xml
<CustomField>
    <fullName>Opp_Business_Unit_del__c</fullName>
    <label>Opp. Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Asset Solutions</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Interiors NSW</fullName>
            </value>
            <value>
                <fullName>Interiors QLD</fullName>
            </value>
            <value>
                <fullName>Interiors VIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>