force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Opportunity Number for us to track opportunities from the moment they enter the system</description>
    <displayFormat>{YY}{0000}</displayFormat>
    <inlineHelpText>This number is auto created to help you track opportunities</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>