force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Formula__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;ECI_Negotiation&quot;, &quot;ECI&quot;,
IF(RecordType.DeveloperName = &quot;Tender&quot;, &quot;Tender&quot;, &quot;Planned Work&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type Formula</label>
    <type>Text</type>
</CustomField>