force-app/main/default/objects/Opportunity/fields/Other_Awards__c.field-meta.xml
<CustomField>
    <fullName>Other_Awards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Awards</label>
    <type>Checkbox</type>
</CustomField>