force-app/main/default/objects/Opportunity/fields/Other_Awards_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Awards_Details__c</fullName>
    <label>Other Awards Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>