force-app/main/default/objects/Opportunity/fields/Other_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Services__c</fullName>
    <description>Created during clean up of services picklist field. Used for indicating other services including the primary service</description>
    <label>Other Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACP</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Facades</fullName>
            </value>
            <value>
                <fullName>Fit-out</fullName>
            </value>
            <value>
                <fullName>Joinery</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Panelling</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Remedial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>