force-app/main/default/objects/Opportunity/fields/Owner_Occupier__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupier__c</fullName>
    <inlineHelpText>Is this an Owner / Occupier Opportunity?</inlineHelpText>
    <label>Owner Occupier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>