force-app/main/default/objects/Opportunity/fields/Parent_Account_del__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Parent Account)</relationshipLabel>
    <relationshipName>Opportunities10_del</relationshipName>
    <type>Lookup</type>
</CustomField>