force-app/main/default/objects/Opportunity/fields/PC2_Labs__c.field-meta.xml
<CustomField>
    <fullName>PC2_Labs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC2 Labs</label>
    <type>Checkbox</type>
</CustomField>