force-app/main/default/objects/Opportunity/fields/Planned_Work_vs_Actual__c.field-meta.xml
<CustomField>
    <fullName>Planned_Work_vs_Actual__c</fullName>
    <label>Planned Work vs Actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned Work</fullName>
            </value>
            <value>
                <fullName>Current Opportunities</fullName>
                <default>true</default>
                <label>Current Opportunities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>