force-app/main/default/objects/Opportunity/fields/Planned_Work_vs_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Planned_Work_vs_Opportunity__c</fullName>
    <formula>IF(RecordType.Name = &quot;Planned Work&quot;, &quot;Planned Work&quot;, &quot;Opportunity&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Work vs Opportunity</label>
    <type>Text</type>
</CustomField>