force-app/main/default/objects/Opportunity/fields/PM_BU_Rel_Status__c.field-meta.xml
<CustomField>
    <fullName>PM_BU_Rel_Status__c</fullName>
    <formula>IF(
ISBLANK(Project_Manager__c), &quot;&quot;,

CASE(Buildcorp_Business_Unit__c, 
&quot;Interiors NSW&quot;, TEXT( Project_Manager__r.Int_NSW_Relationship__c ),
&quot;Interiors QLD&quot;, TEXT(Project_Manager__r.Int_QLD_Relationship__c),
&quot;Interiors VIC&quot;, TEXT(Project_Manager__r.Int_Vic_Relationship__c),
&quot;Asset Solutions&quot;, TEXT(Project_Manager__r.Asset_Sol_Relationship__c),
&quot;Contracting&quot;, TEXT(Project_Manager__r.Contracting_Relationship__c),
&quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM BU Rel Status</label>
    <type>Text</type>
</CustomField>