force-app/main/default/objects/Opportunity/fields/PM_Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>PM_Closed_Count__c</fullName>
    <formula>Project_Manager__r.Closed_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Closed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>