force-app/main/default/objects/Opportunity/fields/Political_Landscape__c.field-meta.xml
<CustomField>
    <fullName>Political_Landscape__c</fullName>
    <inlineHelpText>Do you consider this Opportunity to have lot of &quot;political&quot; issues, normal or a low amount</inlineHelpText>
    <label>Political Landscape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>