force-app/main/default/objects/Opportunity/fields/Potential_Margin__c.field-meta.xml
<CustomField>
    <fullName>Potential_Margin__c</fullName>
    <formula>0.02 *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated at 2% of Opportunity Amount</inlineHelpText>
    <label>Potential Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>