force-app/main/default/objects/Opportunity/fields/Prefabrication__c.field-meta.xml
<CustomField>
    <fullName>Prefabrication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefabrication</label>
    <type>Checkbox</type>
</CustomField>