force-app/main/default/objects/Opportunity/fields/Prefabrication_Details__c.field-meta.xml
<CustomField>
    <fullName>Prefabrication_Details__c</fullName>
    <label>Prefabrication Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>