force-app/main/default/objects/Opportunity/fields/Pricing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Strategy__c</fullName>
    <label>Pricing Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>