force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Nominate the priority of this opportunity for the business regardless of the stage in the pipeline</description>
    <inlineHelpText>Number 1 is highest priority 
Number 2 keen but not critical
Number 3 just keeping an eye on them</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FF0000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#78C953</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#33CCFF</color>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>