force-app/main/default/objects/Opportunity/fields/Private_vs_Public__c.field-meta.xml
<CustomField>
    <fullName>Private_vs_Public__c</fullName>
    <inlineHelpText>Where does the majority of the funding come from

Federal Government, State Government and Councils would be considered public</inlineHelpText>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>